--- a/interno/aprovacoes.html
+++ b/interno/aprovacoes.html
@@ -268,7 +268,7 @@
                 </label>
                 <label id="roles-field-grupamento">
                     <span>Grupamento</span>
-                    <select id="roles-grupamento">
+                    <select id="roles-grupamento" multiple>
                         <option value="">Selecione o grupamento</option>
                         <option value="Diretoria de Gestão de Pessoas">Diretoria de Gestão de Pessoas</option>
                         <option value="Diretoria Executiva">Diretoria Executiva</option>
@@ -280,6 +280,7 @@
                         <option value="Grupo de Patrulhamento Tático">Grupo de Patrulhamento Tático</option>
                         <option value="Núcleo de Operações Especiais">Núcleo de Operações Especiais</option>
                     </select>
+                    <small class="approvals-hint">Use Ctrl/Command para selecionar múltiplos.</small>
                 </label>
                 <label id="roles-field-acesso">
                     <span>Acesso</span>
@@ -289,6 +290,7 @@
                     </select>
                 </label>
                 <label id="roles-field-cursos"><span>Cursos</span><div id="roles-cursos" class="approvals-course-options"></div></label>
+                <label id="roles-field-medalhas"><span>Condecorações e Medalhas</span><div id="roles-medalhas" class="approvals-medal-options"></div></label>
             </div>
             <div class="approvals-role-actions">
                 <button id="roles-modal-cancel" type="button" class="approvals-btn">Cancelar</button>
