--- a/interno/bou.html
+++ b/interno/bou.html
@@ -158,6 +158,12 @@
                             </header>
                             <div class="bou-card-body">
                                 <div class="bou-grid">
+                                    <div class="bou-grid-span">
+                                        <div id="bouLastTitle" class="bou-last-title-hint is-hidden">
+                                            <span class="bou-last-title-label">Último BOU enviado:</span>
+                                            <strong class="bou-last-title-text" id="bouLastTitleText"></strong>
+                                        </div>
+                                    </div>
                                     <div>
                                         <label for="titulo">T&iacute;tulo do BOU</label>
                                         <input id="titulo" type="text" placeholder="BOU xxx/2026 (unidade)">
