--- a/interno/equipe.html
+++ b/interno/equipe.html
@@ -50,6 +50,76 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <header class="top-header">
+        <div class="container">
+            <div class="top-header-content">
+                <div class="logo-governo">
+                    <a href="painel.html" class="gov-logo-link">
+                        <img src="assets/img/gov_br.png" alt="Governo do Brasil" class="gov-logo">
+                    </a>
+                    <span class="gov-divider" aria-hidden="true"></span>
+                    <div class="gov-identity">
+                        <span class="gov-ministry">MINISTÉRIO DA JUSTIÇA E SEGURANÇA PÚBLICA</span>
+                        <span class="gov-agency">Polícia Rodoviária Federal</span>
+                    </div>
+                </div>
+                <div class="top-header-right">
+                    <div class="user-auth-header">
+                        <div id="header-user-menu" class="user-menu-header">
+                            <span class="user-name-header">Equipe</span>
+                            <a href="painel.html#meu-perfil" class="auth-link" id="header-edit-profile-link">
+                                <i class="fas fa-user-edit"></i>
+                                <span>EDITAR PERFIL</span>
+                            </a>
+                            <a href="#" onclick="auth.logout(); return false;" class="auth-link">
+                                <i class="fas fa-sign-out-alt"></i>
+                                <span>SAIR</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <header class="main-header main-header--duna" id="menu">
+        <div class="container">
+            <div class="header-row">
+                <nav class="mini-nav mini-nav--left" aria-label="Páginas (esquerda)">
+                    <a href="../index.html">INÍCIO</a>
+                    <div class="nav-dropdown">
+                        <a href="#" class="nav-link-dropdown" aria-haspopup="true" aria-expanded="false">INSTITUCIONAL</a>
+                        <div class="dropdown-menu">
+                            <a href="../organograma.html">Organograma</a>
+                            <a href="../historia-valores.html">História e Valores</a>
+                        </div>
+                    </div>
+                    <div class="nav-dropdown">
+                        <a href="#" class="nav-link-dropdown" aria-haspopup="true" aria-expanded="false">SERVIÇOS</a>
+                        <div class="dropdown-menu">
+                            <a href="../documentos.html">Documentos PRF</a>
+                        </div>
+                    </div>
+                </nav>
+
+                <div class="main-header-top">
+                    <div class="brand-block">
+                        <a href="../index.html" class="brand-logo-link">
+                            <img src="assets/img/prf.png" alt="PRF Jaguaré" class="brand-logo">
+                        </a>
+                    </div>
+                </div>
+
+                <nav class="mini-nav mini-nav--right" aria-label="Páginas (direita)">
+                    <a href="../concursos.html">CONCURSOS</a>
+                    <a href="../capacitacao.html">CAPACITAÇÃO E TREINAMENTO</a>
+                    <a href="../corregedoria.html">CORREGEDORIA</a>
+                </nav>
+            </div>
+            <div class="red-line"></div>
+        </div>
+    </header>
+
     <section class="latest-news info-section">
         <div class="container">
             <div class="news-header">
@@ -70,6 +140,32 @@
             </div>
         </div>
     </section>
+
+    <footer class="diario-footer">
+        <div class="container">
+            <div class="diario-footer-top">
+                <div class="diario-footer-brand">
+                    <img src="assets/img/prf.png" alt="Polícia Rodoviária Federal" class="diario-footer-logo">
+                    <div class="diario-footer-brand-text">
+                        <strong>Polícia Rodoviária Federal</strong>
+                        <span>Unidade Operacional Jaguaré</span>
+                        <span>São Paulo - SP</span>
+                    </div>
+                </div>
+                <div class="diario-footer-contact">
+                    <h4>CONTATO</h4>
+                    <p>PRF — Delegacia de Jaguaré</p>
+                    <p>Telefone: 191 (PRF)</p>
+                    <p>Emergência: 190</p>
+                </div>
+            </div>
+            <div class="diario-footer-divider" aria-hidden="true"></div>
+            <div class="diario-footer-bottom">
+                <span>© 2026 Polícia Rodoviária Federal — Todos os direitos reservados</span>
+                <img src="assets/img/gov_br.png" alt="gov.br" class="diario-footer-gov">
+            </div>
+        </div>
+    </footer>
 
     <script src="app.js" defer></script>
     <script>
@@ -122,13 +218,25 @@
                 const nome = safe(agent.nome_guerra, 'Agente');
                 const rg = safe(agent.rg);
                 const cargo = safe(agent.cargo, 'Cargo não definido');
-                const grupamento = safe(agent.grupamento, 'Grupamento não definido');
+                const grupamentoRaw = safe(agent.grupamento, 'Grupamento não definido');
+                const grupamento = grupamentoRaw.includes(' || ')
+                    ? grupamentoRaw.split(' || ').map((g) => g.trim()).filter(Boolean).join(' | ')
+                    : grupamentoRaw;
                 const foto = safe(agent.foto_url, 'assets/img/prf.png');
                 const bous = Number(agent.bou_count || 0);
                 const bousCitados = Number(agent.bou_cited_count || 0);
                 const aits = Number(agent.ait_count || 0);
                 const relatorioAlunoCitados = Number(agent.relatorio_aluno_cited_count || 0);
                 const created = fmtDate(agent.created_at);
+                const medals = Array.isArray(agent.medals) ? agent.medals : [];
+                const medalsHtml = medals.length
+                    ? medals.map((m) => `
+                        <div class="equipe-medal-item">
+                            <img src="assets/img/${m.medal_image}" alt="${m.medal_name}" onerror="this.src='assets/img/mencaoelogio.png'">
+                            <span>${m.medal_name}</span>
+                        </div>
+                    `).join('')
+                    : '<div class="equipe-medal-empty">Nenhuma condecoração atribuída.</div>';
 
                 return `
                     <details class="equipe-card">
@@ -172,6 +280,12 @@
                                     <i class="fas fa-calendar-check"></i>
                                     <span class="equipe-metric-value">${created}</span>
                                     <span class="equipe-metric-label">Conta criada em</span>
+                                </div>
+                            </div>
+                            <div class="equipe-medals">
+                                <h4>Condecorações e Medalhas</h4>
+                                <div class="equipe-medal-list">
+                                    ${medalsHtml}
                                 </div>
                             </div>
                         </div>
@@ -289,6 +403,32 @@
                         });
                     }
 
+                    if (Array.isArray(rows) && rows.length) {
+                        const ids = rows.map((r) => r.id).filter(Boolean);
+                        if (ids.length) {
+                            const medalsResult = await client
+                                .from('profile_medals')
+                                .select('user_id, medal_name, medal_image')
+                                .in('user_id', ids)
+                                .order('awarded_at', { ascending: false });
+                            const medalRows = Array.isArray(medalsResult.data) ? medalsResult.data : [];
+                            const medalsByUser = {};
+                            medalRows.forEach((m) => {
+                                const key = String(m.user_id || '');
+                                if (!key) return;
+                                if (!medalsByUser[key]) medalsByUser[key] = [];
+                                medalsByUser[key].push({
+                                    medal_name: m.medal_name || 'Condecoração',
+                                    medal_image: m.medal_image || 'mencaoelogio.png'
+                                });
+                            });
+                            rows = rows.map((r) => ({
+                                ...r,
+                                medals: medalsByUser[String(r.id)] || []
+                            }));
+                        }
+                    }
+
                     allAgents = rows;
                     render(allAgents);
                     el.status.textContent = 'Equipe carregada.';
@@ -305,3 +445,4 @@
     </script>
 </body>
 </html>
+
