--- a/interno/perfil.html
+++ b/interno/perfil.html
@@ -2,286 +2,15 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
-    <title>Meu Perfil - PRF Jaguar&eacute;</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/prflogoico.ico">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecionando...</title>
     <script>
-        window.SUPABASE_URL = 'https://pssujmmuachdymlwsiuj.supabase.co';
-        window.SUPABASE_ANON_KEY = 'sb_publishable_PYQxZQr_TfVEesG7L4WI4g_-VjPHVpW';
-    </script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-    <header class="top-header">
-        <div class="container">
-            <div class="top-header-content">
-                <div class="logo-governo">
-                    <a href="painel.html" class="gov-logo-link">
-                        <img src="assets/img/gov_br.png" alt="Governo do Brasil" class="gov-logo">
-                    </a>
-                    <span class="gov-divider" aria-hidden="true"></span>
-                    <div class="gov-identity">
-                        <span class="gov-ministry">MINIST?RIO DA JUSTI?A E SEGURAN?A P?BLICA</span>
-                        <span class="gov-agency">Pol?cia Rodovi?ria Federal</span>
-                    </div>
-                </div>
-                <div class="top-header-right">
-                    <div class="user-auth-header">
-                        <div id="header-user-menu" class="user-menu-header">
-                            <span class="user-name-header">Perfil</span>
-                            <a href="perfil.html" class="auth-link" id="header-edit-profile-link">
-                                <i class="fas fa-user-edit"></i>
-                                <span>EDITAR PERFIL</span>
-                            </a>
-                            <a href="#" onclick="auth.logout(); return false;" class="auth-link">
-                                <i class="fas fa-sign-out-alt"></i>
-                                <span>SAIR</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <section class="latest-news info-section">
-        <div class="container">
-            <div class="news-header">
-                <h2>Meu Perfil</h2>
-                <div class="red-line-news"></div>
-            </div>
-
-            <article class="profile-editor-card">
-                <div class="profile-editor-photo-wrap profile-editor-photo-wrap--top">
-                    <div class="profile-editor-photo-holder">
-                        <img id="perfil-foto-preview" class="profile-editor-photo" src="assets/img/prf.png" alt="Foto do perfil">
-                        <button id="perfil-foto-trigger" class="profile-editor-photo-trigger" type="button" aria-label="Alterar foto">
-                            <i class="fas fa-pen"></i>
-                        </button>
-                    </div>
-                    <input id="perfil-foto-file" type="file" accept="image/*" class="auth-photo-file-input">
-                </div>
-                <div class="profile-editor-stack">
-                    <div>
-                        <label>Nome</label>
-                        <input id="perfil-nome" type="text">
-                    </div>
-                    <div>
-                        <label>Email</label>
-                        <input id="perfil-email" type="text" readonly>
-                    </div>
-                    <div>
-                        <label>RG</label>
-                        <input id="perfil-rg" type="text">
-                    </div>
-                    <div>
-                        <label>Cargo</label>
-                        <input id="perfil-cargo" type="text" readonly>
-                    </div>
-                    <div>
-                        <label>Grupamento</label>
-                        <input id="perfil-grupamento" type="text" readonly>
-                    </div>
-                    <div>
-                        <label>Acesso</label>
-                        <input id="perfil-acesso" type="text" readonly>
-                    </div>
-                    <div>
-                        <label>Cursos</label>
-                        <input id="perfil-cursos" type="text" readonly>
-                    </div>
-                </div>
-                <div class="profile-editor-actions">
-                    <button id="perfil-salvar-foto" type="button" class="bou-btn bou-btn-primary">Salvar alterações</button>
-                    <a href="painel.html" class="bou-btn bou-btn-secondary">Voltar ao painel</a>
-                </div>
-                <p id="perfil-feedback" class="approvals-status"></p>
-            </article>
-        </div>
-    </section>
-
-    <script src="app.js" defer></script>
-    <script>
-        window.auth = window.auth || {
-            logout: async function () {
-                try {
-                    const c = window.supabase.createClient(window.SUPABASE_URL, window.SUPABASE_ANON_KEY);
-                    await c.auth.signOut();
-                } catch (e) {
-                    /* ignore */
-                } finally {
-                    window.location.replace('../login.html');
-                }
-            }
-        };
-
         (function () {
-            let client = null;
-            let currentUser = null;
-            let pendingPhotoFile = null;
-            let currentFotoPath = '';
-
-            function byId(id) { return document.getElementById(id); }
-            function setFeedback(msg, isError) {
-                const node = byId('perfil-feedback');
-                if (!node) return;
-                node.textContent = msg || '';
-                node.className = isError ? 'approvals-status is-error' : 'approvals-status';
-            }
-
-            function setPreview(src) {
-                const img = byId('perfil-foto-preview');
-                if (img && src) img.src = src;
-            }
-
-            async function enforceAndLoad() {
-                client = window.supabase.createClient(window.SUPABASE_URL, window.SUPABASE_ANON_KEY);
-                const sessionResult = await client.auth.getSession();
-                const session = sessionResult && sessionResult.data ? sessionResult.data.session : null;
-                currentUser = session ? session.user : null;
-                if (!currentUser) {
-                    window.location.replace('../login.html');
-                    return;
-                }
-
-                const result = await client
-                    .from('profiles')
-                    .select('nome_guerra, email, rg, cargo, grupamento, acesso, cursos, foto_url, foto_path, aprovado')
-                    .eq('id', currentUser.id)
-                    .maybeSingle();
-
-                if (result.error || !result.data || result.data.aprovado !== true) {
-                    await client.auth.signOut();
-                    window.location.replace('../login.html');
-                    return;
-                }
-
-                const p = result.data;
-                if (byId('perfil-nome')) byId('perfil-nome').value = p.nome_guerra || '';
-                if (byId('perfil-email')) byId('perfil-email').value = p.email || currentUser.email || '';
-                if (byId('perfil-rg')) byId('perfil-rg').value = p.rg || '';
-                if (byId('perfil-cargo')) byId('perfil-cargo').value = p.cargo || '-';
-                if (byId('perfil-grupamento')) byId('perfil-grupamento').value = p.grupamento || '-';
-                if (byId('perfil-acesso')) byId('perfil-acesso').value = p.acesso || '-';
-                if (byId('perfil-cursos')) byId('perfil-cursos').value = p.cursos ? String(p.cursos).split(' || ').join(' | ') : '-';
-                currentFotoPath = p.foto_path || '';
-                if (p.foto_url) setPreview(p.foto_url);
-            }
-
-            function bindFileInput() {
-                const input = byId('perfil-foto-file');
-                const trigger = byId('perfil-foto-trigger');
-                if (!input) return;
-                if (trigger) {
-                    trigger.addEventListener('click', function () {
-                        input.click();
-                    });
-                }
-                input.addEventListener('change', function () {
-                    const file = input.files && input.files[0] ? input.files[0] : null;
-                    if (!file) return;
-                    if (!/^image\//i.test(file.type)) {
-                        setFeedback('Selecione um arquivo de imagem valido.', true);
-                        return;
-                    }
-                    if (file.size > 5 * 1024 * 1024) {
-                        setFeedback('A imagem deve ter no maximo 5MB.', true);
-                        return;
-                    }
-                    pendingPhotoFile = file;
-                    setPreview(URL.createObjectURL(file));
-                    setFeedback('Foto carregada. Clique em "Salvar foto" para aplicar.');
-                });
-            }
-
-            function bindSave() {
-                const btn = byId('perfil-salvar-foto');
-                if (!btn) return;
-                btn.addEventListener('click', async function () {
-                    if (!client || !currentUser) return;
-                    const nome = (byId('perfil-nome') && byId('perfil-nome').value ? byId('perfil-nome').value : '').trim();
-                    const rg = (byId('perfil-rg') && byId('perfil-rg').value ? byId('perfil-rg').value : '').trim();
-                    if (!nome || !rg) {
-                        setFeedback('Preencha nome e RG para salvar.', true);
-                        return;
-                    }
-
-                    btn.disabled = true;
-                    try {
-                        const basicResult = await client.rpc('update_own_profile_basic', {
-                            p_nome_guerra: nome,
-                            p_rg: rg
-                        });
-                        if (basicResult.error) {
-                            setFeedback('Falha ao salvar nome/RG: ' + basicResult.error.message, true);
-                            return;
-                        }
-
-                        if (pendingPhotoFile) {
-                            const safeName = (pendingPhotoFile.name || 'foto')
-                                .normalize('NFD')
-                                .replace(/[\u0300-\u036f]/g, '')
-                                .replace(/[^a-zA-Z0-9._-]/g, '_');
-                            const ext = safeName.includes('.') ? safeName.split('.').pop().toLowerCase() : 'jpg';
-                            const path = `${currentUser.id}/${Date.now()}_${Math.random().toString(36).slice(2, 8)}.${ext}`;
-
-                            const upload = await client
-                                .storage
-                                .from('profile-photos')
-                                .upload(path, pendingPhotoFile, {
-                                    cacheControl: '3600',
-                                    upsert: false
-                                });
-
-                            if (upload.error) {
-                                setFeedback('Nome/RG salvos, mas falha ao enviar foto: ' + upload.error.message, true);
-                                return;
-                            }
-
-                            const publicUrlResult = client
-                                .storage
-                                .from('profile-photos')
-                                .getPublicUrl(path);
-                            const publicUrl = publicUrlResult && publicUrlResult.data ? publicUrlResult.data.publicUrl : '';
-
-                            const result = await client.rpc('update_own_profile_photo', {
-                                p_foto_url: publicUrl,
-                                p_foto_path: path
-                            });
-                            if (result.error) {
-                                setFeedback('Nome/RG salvos, mas falha ao salvar foto: ' + result.error.message, true);
-                                return;
-                            }
-
-                            if (currentFotoPath && currentFotoPath !== path) {
-                                await client.storage.from('profile-photos').remove([currentFotoPath]);
-                            }
-
-                            currentFotoPath = path;
-                            pendingPhotoFile = null;
-                        }
-
-                        setFeedback('Perfil atualizado com sucesso.');
-                    } catch (e) {
-                        setFeedback('Falha ao salvar perfil.', true);
-                    } finally {
-                        btn.disabled = false;
-                    }
-                });
-            }
-
-            document.addEventListener('DOMContentLoaded', async function () {
-                try {
-                    bindFileInput();
-                    bindSave();
-                    await enforceAndLoad();
-                } catch (e) {
-                    window.location.replace('../login.html');
-                }
-            });
+            window.location.replace('painel.html#meu-perfil');
         })();
     </script>
+</head>
+<body>
+    <p>Redirecionando...</p>
 </body>
 </html>
