--- a/interno/bou-envios.html
+++ b/interno/bou-envios.html
@@ -165,6 +165,17 @@
                             <div id="listaEnvios" class="bou-envios-list"></div>
                         </div>
                     </article>
+
+                    <article class="bou-card" style="margin-top:18px;">
+                        <div style="display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:8px;">
+                            <strong>BOUs gerais</strong>
+                            <span id="contadorEnviosTodos" class="bou-badge">0</span>
+                        </div>
+                        <p id="enviosTodosStatus" class="bou-hint" style="margin: 0 0 12px 0;">Carregando BOUs gerais...</p>
+                        <div class="bou-card-body">
+                            <div id="listaEnviosTodos" class="bou-envios-list is-geral"></div>
+                        </div>
+                    </article>
                 </section>
             </div>
 
